syntax = "proto3";

package discuss;

message TDiscussArg {
  int32 Htid = 1;
  string Msg = 2;
}

message TDiscussLikeArg {
  int32 Htid = 1;
  int32 MsgId = 2;
}

message TDiscussRet {
  int32 msgId = 1;
  string FilterMsg = 2;
}

message TGetDiscussArg {
  int32 Htid = 1;
}

message TGetDiscussRet {
  int32 DisLikeNum = 1;
  int64 DisLikeTime = 2;
  int64 MsgTime = 3;
  int32 HeroLikeNum = 4;
  repeated TMsgInfo MsgInfo = 5;
}

message THeroLikeArg {
  int32 Htid = 1;
}

message THeroLikeRet {
  int32 HeroLikeNum = 1;
}

message TMsgInfo {
  string Name = 1;
  string Msg = 2;
  int32 LikeNum = 3;
  int32 MsgID = 4;
  int64 LikeTime = 5;
  int64 IsLiked = 6;
  int64 IsDisLiked = 7;
  int32 Level = 8;
}

